src/objects/GeoCodeApiData__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_Sold__c</fullName>
        <label>Amount Sold</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locale__c</fullName>
        <label>Locale</label>
        <picklist>
            <picklistValues>
                <fullName>EN-US</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>EN-CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FR-CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT-BR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES-MX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES-CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES-CL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES-AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EN-GB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EN-IN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OnPrem__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OnPrem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RB_API_External_ID__c</fullName>
        <label>RB API External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDP_API_External_ID__c</fullName>
        <label>RDP API External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAPLevel3Code__c</fullName>
        <label>SAPLevel3Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAPLevel3Descr__c</fullName>
        <label>SAPLevel3Descr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAPLevel4Code__c</fullName>
        <label>SAPLevel4Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAPLevel4Descr__c</fullName>
        <label>SAPLevel4Descr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAPLevel5Code__c</fullName>
        <label>SAPLevel5Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAPLevel5Descr__c</fullName>
        <label>SAPLevel5Descr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StoreId1__c</fullName>
        <label>StoreId1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StoreName__c</fullName>
        <label>StoreName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Type__c</fullName>
        <label>Store Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telephone__c</fullName>
        <label>Telephone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>GeoCodeApiData</label>
    <nameField>
        <displayFormat>G-{00000}</displayFormat>
        <label>GeoCodeApiData Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GeoCodeApiData</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>